--- a/public/index.html
+++ b/public/index.html
@@ -141,5 +141,12 @@
       }, 6);
     }
   </script>
+
+  
+
+<!-- Control Center for Material UI Kit: parallax effects, scripts for the example pages etc -->
+<!--  Google Maps Plugin    -->
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDTTfWur0PDbZWPr7Pmq8K3jiDp0_xUziI"></script>
+<script src="../assets/js/material-kit-pro.min.js?v=3.0.3" type="text/javascript"></script>
   </body>
 </html>
